--- a/public/style.css
+++ b/public/style.css
@@ -16,4 +16,17 @@ body {
 }
 video {
  width: 100%
- boder-radius
+ boder-radius: 4px;
+}
+.info {
+ margin-top: 8px;
+}
+.info h3 {
+ font-size: 16px;
+ margin: 4px 0;
+ color: #002f6c;
+}
+ .info p {
+  font-size: 13px;
+  color: #e0dfdf;
+ }
